fixed landing page overflows and margins

--- a/src/components/landingPage/landingpage.css
+++ b/src/components/landingPage/landingpage.css
@@ -66,5 +66,10 @@
   height: 75vh;
   min-height:5em;
   width: 100%;
-  overflow: scroll;
+  overflow: visible;
+}
+@media (max-width: 575px) {
+  .log-in {
+    margin-left:2px;
+  }
 }
